--- a/packages/3.x/Di/migrating.html
+++ b/packages/3.x/Di/migrating.html
@@ -14,7 +14,7 @@ permalink: /packages/3.x/Di/migrating.html
         <tr>
             <td class="prev"><a href="/packages/3.x/Di/auto.html">Auto-Resolution Of Constructor Parameters</a></td>
             <td class="parent">1.1. Aura.Di</th>
-            <td class="next"><a href="/packages/3.x/Payload.html">Aura.Payload</a></td>
+            <td class="next"><a href="/packages/3.x/Intl.html">Aura.Intl</a></td>
         </tr>
     </table>
 </nav>
@@ -72,12 +72,12 @@ $di = $container_builder-&gt;newConfiguredInstance([
         <tr>
             <td class="prev"><a href="/packages/3.x/Di/auto.html">Prev</a></td>
             <td class="parent"><a href="/packages/3.x/Di/">Up</a></td>
-            <td class="next"><a href="/packages/3.x/Payload.html">Next</a></td>
+            <td class="next"><a href="/packages/3.x/Intl.html">Next</a></td>
         </tr>
         <tr>
             <td class="prev">1.1.9. Auto-Resolution Of Constructor Parameters</td>
             <td class="parent">1.1. Aura.Di</td>
-            <td class="next">1.2. Aura.Payload</td>
+            <td class="next">1.2. Aura.Intl</td>
         </tr>
     </table>
 </nav>
