--- a/packages/index.html
+++ b/packages/index.html
@@ -36,22 +36,31 @@ permalink: /packages/
 <dt>1.1.9. <a href="/packages/3.x/Di/auto.html#1-1-9">Auto-Resolution Of Constructor Parameters</a></dt>
 <dt>1.1.10. <a href="/packages/3.x/Di/migrating.html#1-1-10">Migrating from 2.x to 3.x</a></dt>
 </dl></dd>
-<dt>1.2. <a href="/packages/3.x/Payload.html#1-2">Aura.Payload</a></dt>
+<dt>1.2. <a href="/packages/3.x/Intl.html#1-2">Aura.Intl</a></dt>
 <dd><dl>
-<dt>1.2.1. <a href="/packages/3.x/Payload.html#1-2-1">Getting Started</a></dt>
-<dt>1.2.2. <a href="/packages/3.x/Payload.html#1-2-2">Methods</a></dt>
-<dt>1.2.3. <a href="/packages/3.x/Payload.html#1-2-3">Status Values</a></dt>
-<dt>1.2.4. <a href="/packages/3.x/Payload.html#1-2-4">Example</a></dt>
+<dt>1.2.1. <a href="/packages/3.x/Intl.html#1-2-1">Getting Started</a></dt>
+<dt>1.2.2. <a href="/packages/3.x/Intl.html#1-2-2">Setting Localized Messages For A Package</a></dt>
+<dt>1.2.3. <a href="/packages/3.x/Intl.html#1-2-3">Setting The Default Locale</a></dt>
+<dt>1.2.4. <a href="/packages/3.x/Intl.html#1-2-4">Getting A Localized Message</a></dt>
+<dt>1.2.5. <a href="/packages/3.x/Intl.html#1-2-5">Replacing Message Tokens With Values</a></dt>
+<dt>1.2.6. <a href="/packages/3.x/Intl.html#1-2-6">Pluralized Messages</a></dt>
 </dl></dd>
-<dt>1.3. <a href="/packages/3.x/Router/">Aura.Router</a></dt>
+<dt>1.3. <a href="/packages/3.x/Payload.html#1-3">Aura.Payload</a></dt>
 <dd><dl>
-<dt>1.3.1. <a href="/packages/3.x/Router/getting-started.html#1-3-1">Getting Started</a></dt>
-<dt>1.3.2. <a href="/packages/3.x/Router/defining-routes.html#1-3-2">Defining Routes</a></dt>
-<dt>1.3.3. <a href="/packages/3.x/Router/attaching-route-groups.html#1-3-3">Attaching Route Groups</a></dt>
-<dt>1.3.4. <a href="/packages/3.x/Router/generating-paths.html#1-3-4">Generating Paths From Routes</a></dt>
-<dt>1.3.5. <a href="/packages/3.x/Router/custom-maps.html#1-3-5">Building Custom Maps and Routes</a></dt>
-<dt>1.3.6. <a href="/packages/3.x/Router/custom-matching.html#1-3-6">Custom Matching Rules</a></dt>
-<dt>1.3.7. <a href="/packages/3.x/Router/other-topics.html#1-3-7">Other Topics</a></dt>
+<dt>1.3.1. <a href="/packages/3.x/Payload.html#1-3-1">Getting Started</a></dt>
+<dt>1.3.2. <a href="/packages/3.x/Payload.html#1-3-2">Methods</a></dt>
+<dt>1.3.3. <a href="/packages/3.x/Payload.html#1-3-3">Status Values</a></dt>
+<dt>1.3.4. <a href="/packages/3.x/Payload.html#1-3-4">Example</a></dt>
+</dl></dd>
+<dt>1.4. <a href="/packages/3.x/Router/">Aura.Router</a></dt>
+<dd><dl>
+<dt>1.4.1. <a href="/packages/3.x/Router/getting-started.html#1-4-1">Getting Started</a></dt>
+<dt>1.4.2. <a href="/packages/3.x/Router/defining-routes.html#1-4-2">Defining Routes</a></dt>
+<dt>1.4.3. <a href="/packages/3.x/Router/attaching-route-groups.html#1-4-3">Attaching Route Groups</a></dt>
+<dt>1.4.4. <a href="/packages/3.x/Router/generating-paths.html#1-4-4">Generating Paths From Routes</a></dt>
+<dt>1.4.5. <a href="/packages/3.x/Router/custom-maps.html#1-4-5">Building Custom Maps and Routes</a></dt>
+<dt>1.4.6. <a href="/packages/3.x/Router/custom-matching.html#1-4-6">Custom Matching Rules</a></dt>
+<dt>1.4.7. <a href="/packages/3.x/Router/other-topics.html#1-4-7">Other Topics</a></dt>
 </dl></dd>
 </dl></dd>
 <dt>2. <a href="/packages/2.x/">Version 2.x</a></dt>
