--- a/packages/2.x/Sql.html
+++ b/packages/2.x/Sql.html
@@ -82,7 +82,7 @@ for picking different database connections (default, read, and write).</p>
 <p><a href="https://scrutinizer-ci.com/g/auraphp/Aura.Sql/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Sql/badges/quality-score.png?b=develop-2" alt="Scrutinizer Code Quality"></a>
 <a href="https://scrutinizer-ci.com/g/auraphp/Aura.Sql/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Sql/badges/coverage.png?b=develop-2" alt="Code Coverage"></a>
 <a href="https://travis-ci.org/auraphp/Aura.Sql"><img src="https://travis-ci.org/auraphp/Aura.Sql.png?branch=develop-2" alt="Build Status"></a></p>
-<p>To run the unit tests at the command line, issue <code>phpunit</code> at the package root. (This requires <a href="http://phpunit.de/manual/">PHPUnit</a> to be available as <code>phpunit</code>.)</p>
+<p>To run the <a href="http://phpunit.de/manual/">PHPUnit</a> unit tests at the command line, issue <code>composer install</code> and then <code>vendor/bin/phpunit</code> at the package root. (This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>.)</p>
 <p>This library attempts to comply with <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-1-basic-coding-standard.md">PSR-1</a>, <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md">PSR-2</a>, and <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-4-autoloader.md">PSR-4</a>. If
 you notice compliance oversights, please send a patch via pull request.</p>
 <h3 id="2-12-1-3">2.12.1.3. Community</h3>
