--- a/packages/3.x/Router/attaching-route-groups.html
+++ b/packages/3.x/Router/attaching-route-groups.html
@@ -31,7 +31,7 @@ $map-&gt;attach($namePrefix, $pathPrefix, function ($map) {
         'format' =&gt; '(\.json|\.atom|\.html)?'
     ]);
 
-    $map-&gt;setDefaults([
+    $map-&gt;defaults([
         'format' =&gt; '.html',
     ]);
 
