--- a/packages/3.x/Router/index.html
+++ b/packages/3.x/Router/index.html
@@ -25,25 +25,25 @@ permalink: /packages/3.x/Router/
 <dd><dl>
 <dt>1.4.1.1. <a href="/packages/3.x/Router/getting-started.html#1-4-1-1">Adding A Route</a></dt>
 <dt>1.4.1.2. <a href="/packages/3.x/Router/getting-started.html#1-4-1-2">Matching A Request To A Route</a></dt>
-<dd><dl>
-<dt>1.4.1.2.1. <a href="/packages/3.x/Router/getting-started.html#1-4-1-2-1">The $request Object</a></dt>
-</dl></dd>
 <dt>1.4.1.3. <a href="/packages/3.x/Router/getting-started.html#1-4-1-3">Dispatching A Route</a></dt>
 <dt>1.4.1.4. <a href="/packages/3.x/Router/getting-started.html#1-4-1-4">Handling Failure To Match</a></dt>
+<dt>1.4.1.5. <a href="/packages/3.x/Router/getting-started.html#1-4-1-5">Working Example</a></dt>
 </dl></dd>
 <dt>1.4.2. <a href="/packages/3.x/Router/defining-routes.html#1-4-2">Defining Routes</a></dt>
 <dd><dl>
 <dt>1.4.2.1. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-1">Placeholder Tokens and Default Values</a></dt>
-<dt>1.4.2.2. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-2">Optional Placeholder Tokens</a></dt>
-<dt>1.4.2.3. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-3">Wildcard Attributes</a></dt>
-<dt>1.4.2.4. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-4">Host Matching</a></dt>
-<dt>1.4.2.5. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-5">Accept Headers</a></dt>
-<dt>1.4.2.6. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-6">Multiple HTTP Verbs</a></dt>
-<dt>1.4.2.7. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-7">Secure Protocols</a></dt>
-<dt>1.4.2.8. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-8">Non-Routable Routes</a></dt>
-<dt>1.4.2.9. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-9">Authentication</a></dt>
-<dt>1.4.2.10. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-10">Custom Extras</a></dt>
-<dt>1.4.2.11. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-11">Default Map Route Specifications</a></dt>
+<dt>1.4.2.2. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-2">Custom Placeholder Token Matching</a></dt>
+<dt>1.4.2.3. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-3">Optional Placeholder Tokens</a></dt>
+<dt>1.4.2.4. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-4">Wildcard Attributes</a></dt>
+<dt>1.4.2.5. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-5">Host Matching</a></dt>
+<dt>1.4.2.6. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-6">Accept Headers</a></dt>
+<dt>1.4.2.7. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-7">Multiple HTTP Verbs</a></dt>
+<dt>1.4.2.8. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-8">Secure Protocols</a></dt>
+<dt>1.4.2.9. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-9">Non-Routable Routes</a></dt>
+<dt>1.4.2.10. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-10">Authentication</a></dt>
+<dt>1.4.2.11. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-11">Custom Extras</a></dt>
+<dt>1.4.2.12. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-12">Route-Specific Matching Logic</a></dt>
+<dt>1.4.2.13. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-13">Default Map Route Specifications</a></dt>
 </dl></dd>
 <dt>1.4.3. <a href="/packages/3.x/Router/attaching-route-groups.html#1-4-3">Attaching Route Groups</a></dt>
 <dt>1.4.4. <a href="/packages/3.x/Router/generating-paths.html#1-4-4">Generating Paths From Routes</a></dt>
@@ -67,6 +67,7 @@ permalink: /packages/3.x/Router/
 <dt>1.4.7.1. <a href="/packages/3.x/Router/other-topics.html#1-4-7-1">Catchall Routes</a></dt>
 <dt>1.4.7.2. <a href="/packages/3.x/Router/other-topics.html#1-4-7-2">Logging</a></dt>
 <dt>1.4.7.3. <a href="/packages/3.x/Router/other-topics.html#1-4-7-3">Base Path</a></dt>
+<dt>1.4.7.4. <a href="/packages/3.x/Router/other-topics.html#1-4-7-4">Route Helpers</a></dt>
 </dl></dd>
 </dl>
 
