--- a/packages/index.html
+++ b/packages/index.html
@@ -62,6 +62,15 @@ permalink: /packages/
 <dt>1.4.6. <a href="/packages/3.x/Router/custom-matching.html#1-4-6">Custom Matching Rules</a></dt>
 <dt>1.4.7. <a href="/packages/3.x/Router/other-topics.html#1-4-7">Other Topics</a></dt>
 </dl></dd>
+<dt>1.5. <a href="/packages/3.x/Sql/">Aura.Sql</a></dt>
+<dd><dl>
+<dt>1.5.1. <a href="/packages/3.x/Sql/getting-started.html#1-5-1">Getting Started</a></dt>
+<dt>1.5.2. <a href="/packages/3.x/Sql/fetch.html#1-5-2">The <code>fetch*()</code> Methods</a></dt>
+<dt>1.5.3. <a href="/packages/3.x/Sql/yield.html#1-5-3">The <code>yield*()</code> Methods</a></dt>
+<dt>1.5.4. <a href="/packages/3.x/Sql/profiling-logging.html#1-5-4">Profiling and Logging</a></dt>
+<dt>1.5.5. <a href="/packages/3.x/Sql/connection-locator.html#1-5-5">Connection Locator</a></dt>
+<dt>1.5.6. <a href="/packages/3.x/Sql/upgrade.html#1-5-6">3.x Upgrade Notes</a></dt>
+</dl></dd>
 </dl></dd>
 <dt>2. <a href="/packages/2.x/">Version 2.x</a></dt>
 <dd><dl>
