--- a/packages/2.x/SqlQuery.html
+++ b/packages/2.x/SqlQuery.html
@@ -31,7 +31,7 @@ although <a href="http://php.net/PDO">PDO</a> in general is recommended.</p>
 <p><a href="https://scrutinizer-ci.com/g/auraphp/Aura.SqlQuery/?branch=2.x"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.SqlQuery/badges/quality-score.png?b=2.x" alt="Scrutinizer Code Quality"></a>
 <a href="https://scrutinizer-ci.com/g/auraphp/Aura.SqlQuery/?branch=2.x"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.SqlQuery/badges/coverage.png?b=2.x" alt="Code Coverage"></a>
 <a href="https://travis-ci.org/auraphp/Aura.SqlQuery"><img src="https://travis-ci.org/auraphp/Aura.SqlQuery.png?branch=2.x" alt="Build Status"></a></p>
-<p>To run the unit tests at the command line, issue <code>phpunit</code> at the package root. (This requires <a href="http://phpunit.de/manual/">PHPUnit</a> to be available as <code>phpunit</code>.)</p>
+<p>To run the <a href="http://phpunit.de/manual/">PHPUnit</a> unit tests at the command line, issue <code>composer install</code> and then <code>vendor/bin/phpunit</code> at the package root. (This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>.)</p>
 <p>This library attempts to comply with <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-1-basic-coding-standard.md">PSR-1</a>, <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md">PSR-2</a>, and <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-4-autoloader.md">PSR-4</a>. If
 you notice compliance oversights, please send a patch via pull request.</p>
 <h3 id="2-13-1-3">2.13.1.3. Community</h3>
