--- a/packages/2.x/index.html
+++ b/packages/2.x/index.html
@@ -12,7 +12,7 @@ permalink: /packages/2.x/
             <th colspan="3" class="curr">2. Version 2.x</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/3.x/Router/other-topics.html">Other Topics</a></td>
+            <td class="prev"><a href="/packages/3.x/Sql/upgrade.html">3.x Upgrade Notes</a></td>
             <td class="parent">Aura Packages</th>
             <td class="next"><a href="/packages/2.x/Accept.html">Aura.Accept</a></td>
         </tr>
@@ -318,6 +318,7 @@ permalink: /packages/2.x/
 <dt>2.15.2.11. <a href="/packages/2.x/View.html#2-15-2-11">Closures As Templates</a></dt>
 <dt>2.15.2.12. <a href="/packages/2.x/View.html#2-15-2-12">Registering Template Search Paths</a></dt>
 <dt>2.15.2.13. <a href="/packages/2.x/View.html#2-15-2-13">Changing The Template File Extension</a></dt>
+<dt>2.15.2.14. <a href="/packages/2.x/View.html#2-15-2-14">Advanced Configuration</a></dt>
 </dl></dd>
 </dl></dd>
 <dt>2.16. <a href="/packages/2.x/Web.html#2-16">Aura.Web</a></dt>
@@ -339,12 +340,12 @@ permalink: /packages/2.x/
 <nav class="navfooter">
     <table>
         <tr>
-            <td class="prev"><a href="/packages/3.x/Router/other-topics.html">Prev</a></td>
+            <td class="prev"><a href="/packages/3.x/Sql/upgrade.html">Prev</a></td>
             <td class="parent"><a href="/packages/">Up</a></td>
             <td class="next"><a href="/packages/2.x/Accept.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">1.4.7. Other Topics</td>
+            <td class="prev">1.5.6. 3.x Upgrade Notes</td>
             <td class="parent">Aura Packages</td>
             <td class="next">2.1. Aura.Accept</td>
         </tr>
