--- a/packages/3.x/Router/custom-matching.html
+++ b/packages/3.x/Router/custom-matching.html
@@ -77,6 +77,7 @@ $routerContainer-&gt;getRuleIterator()-&gt;set([
     new Rule\Path(),
     new Rule\Allows(),
     new Rule\Accepts(),
+    new Rule\Special(),
     // custom rule
     new ApiVersionRule()
 ]);
@@ -94,6 +95,7 @@ $routerContainer-&gt;getRuleIterator()-&gt;set([
     new Rule\Path(),
     new Rule\Allows(),
     new Rule\Accepts(),
+    new Rule\Special(),
 ]);
 </code></pre>
 <p>Finally, if you feel you don't need some rules, you can omit them from the list. For example, you may only care about path and HTTP method matching:</p>
