--- a/packages/3.x/Router/getting-started.html
+++ b/packages/3.x/Router/getting-started.html
@@ -28,7 +28,8 @@ $routerContainer = new RouterContainer();
 ?&gt;
 </code></pre>
 <p>You can then retrieve a <em>Map</em> for adding routes, a <em>Matcher</em> for matching the incoming request to a route, and a <em>Generator</em> for generating paths from routes.</p>
-<p>Let's go step-by-step to add a route, match a request against it, and dispatch it.</p>
+<p>Let's go step-by-step to add a route, match a request against it, and dispatch it.
+A full working example is provided at the ended of this page.</p>
 <h2 id="1-4-1-1">1.4.1.1. Adding A Route</h2>
 <p>To add a route, first retrieve the <em>Map</em> from the <em>RouterContainer</em>.</p>
 <pre><code class="language-php">&lt;?php
@@ -78,15 +79,11 @@ $matcher = $routerContainer-&gt;getMatcher();
 ?&gt;
 </code></pre>
 <p>Then call the <code>match()</code> method to match a PSR-7 <em>ServerRequestInterface</em> instance to a mapped <em>Route</em>.</p>
-<pre><code class="language-php">&lt;?php
-/**
- * @var Psr\Http\Message\ServerRequestInterface $request
- */
-$route = $matcher-&gt;match($request);
-?&gt;
+<p>For this you need an implementation of <a href="https://packagist.org/providers/psr/http-message-implementation">psr-7</a> .</p>
+<p>The most widely used one is <a href="https://zendframework.github.io/zend-diactoros/">zend-diactoros</a>.</p>
+<pre><code>composer require zendframework/zend-diactoros
 </code></pre>
-<h3 id="1-4-1-2-1">1.4.1.2.1. The $request Object</h3>
-<p>The <code>$request</code> object can be <a href="https://packagist.org/providers/psr/http-message-implementation">any of the psr-7 implementation</a>. The most widely used is  <a href="https://zendframework.github.io/zend-diactoros/">zend-diactoros</a> . Below is an example how to create the <code>$request</code> object via <code>zend-diactoros</code>.</p>
+<p>Create an instance of <em>ServerRequestInterface</em> object.</p>
 <pre><code class="language-php">$request = Zend\Diactoros\ServerRequestFactory::fromGlobals(
     $_SERVER,
     $_GET,
@@ -95,9 +92,14 @@ $route = $matcher-&gt;match($request);
     $_FILES
 );
 </code></pre>
-<blockquote>
-<p>NB : Make sure you have installed diactoros. Read <a href="https://zendframework.github.io/zend-diactoros/">documentation</a> for more details regarding installation and usage.</p>
-</blockquote>
+<p>and pass <code>$request</code> to match method.</p>
+<pre><code class="language-php">&lt;?php
+/**
+ * @var Psr\Http\Message\ServerRequestInterface $request
+ */
+$route = $matcher-&gt;match($request);
+?&gt;
+</code></pre>
 <h2 id="1-4-1-3">1.4.1.3. Dispatching A Route</h2>
 <p>This is the point at which your application takes over. The route has two properties that you are most likely to be interested in:</p>
 <ul>
@@ -151,6 +153,69 @@ if (! $route) {
 }
 ?&gt;
 </code></pre>
+<h2 id="1-4-1-5">1.4.1.5. Working Example</h2>
+<p>The following is a working example. First, at the command line, require the necessary libraries:</p>
+<pre><code>$ composer require aura/router zendframework/zend-diactoros
+</code></pre>
+<p>Then create the following file as <code>index.php</code>:</p>
+<pre><code class="language-php">&lt;?php
+// set up composer autoloader
+require __DIR__ . '/vendor/autoload.php';
+
+// create a server request object
+$request = Zend\Diactoros\ServerRequestFactory::fromGlobals(
+    $_SERVER,
+    $_GET,
+    $_POST,
+    $_COOKIE,
+    $_FILES
+);
+
+// create the router continer and get the routing map
+$routerContainer = new Aura\Router\RouterContainer();
+$map = $routerContainer-&gt;getMap();
+
+// add a route to the map, and a handler for it
+$map-&gt;get('blog.read', '/blog/{id}', function ($request) {
+    $id = (int) $request-&gt;getAttribute('id');
+    $response = new Zend\Diactoros\Response();
+    $response-&gt;getBody()-&gt;write("You asked for blog entry {$id}.");
+    return $response;
+});
+
+// get the route matcher from the container ...
+$matcher = $routerContainer-&gt;getMatcher();
+
+// .. and try to match the request to a route.
+$route = $matcher-&gt;match($request);
+if (! $route) {
+    echo "No route found for the request.";
+    exit;
+}
+
+// add route attributes to the request
+foreach ($route-&gt;attributes as $key =&gt; $val) {
+    $request = $request-&gt;withAttribute($key, $val);
+}
+
+// dispatch the request to the route handler.
+// (consider using https://github.com/auraphp/Aura.Dispatcher
+// in place of the one callable below.)
+$callable = $route-&gt;handler;
+$response = $callable($request, $response);
+
+// emit the response
+foreach ($response-&gt;getHeaders() as $name =&gt; $values) {
+    foreach ($values as $value) {
+        header(sprintf('%s: %s', $name, $value), false);
+    }
+}
+echo $response-&gt;getBody();
+</code></pre>
+<p>Now start built in PHP server ...</p>
+<pre><code>$ php -S localhost:8000 -t .
+</code></pre>
+<p>... and point your browser to <code>http://localhost:8000/blog/12</code> .</p>
 
 <nav class="navfooter">
     <table>
