--- a/packages/3.x/index.html
+++ b/packages/3.x/index.html
@@ -86,20 +86,23 @@ permalink: /packages/3.x/
 <dt>1.4.1.2. <a href="/packages/3.x/Router/getting-started.html#1-4-1-2">Matching A Request To A Route</a></dt>
 <dt>1.4.1.3. <a href="/packages/3.x/Router/getting-started.html#1-4-1-3">Dispatching A Route</a></dt>
 <dt>1.4.1.4. <a href="/packages/3.x/Router/getting-started.html#1-4-1-4">Handling Failure To Match</a></dt>
+<dt>1.4.1.5. <a href="/packages/3.x/Router/getting-started.html#1-4-1-5">Working Example</a></dt>
 </dl></dd>
 <dt>1.4.2. <a href="/packages/3.x/Router/defining-routes.html#1-4-2">Defining Routes</a></dt>
 <dd><dl>
 <dt>1.4.2.1. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-1">Placeholder Tokens and Default Values</a></dt>
-<dt>1.4.2.2. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-2">Optional Placeholder Tokens</a></dt>
-<dt>1.4.2.3. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-3">Wildcard Attributes</a></dt>
-<dt>1.4.2.4. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-4">Host Matching</a></dt>
-<dt>1.4.2.5. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-5">Accept Headers</a></dt>
-<dt>1.4.2.6. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-6">Multiple HTTP Verbs</a></dt>
-<dt>1.4.2.7. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-7">Secure Protocols</a></dt>
-<dt>1.4.2.8. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-8">Non-Routable Routes</a></dt>
-<dt>1.4.2.9. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-9">Authentication</a></dt>
-<dt>1.4.2.10. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-10">Custom Extras</a></dt>
-<dt>1.4.2.11. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-11">Default Map Route Specifications</a></dt>
+<dt>1.4.2.2. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-2">Custom Placeholder Token Matching</a></dt>
+<dt>1.4.2.3. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-3">Optional Placeholder Tokens</a></dt>
+<dt>1.4.2.4. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-4">Wildcard Attributes</a></dt>
+<dt>1.4.2.5. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-5">Host Matching</a></dt>
+<dt>1.4.2.6. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-6">Accept Headers</a></dt>
+<dt>1.4.2.7. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-7">Multiple HTTP Verbs</a></dt>
+<dt>1.4.2.8. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-8">Secure Protocols</a></dt>
+<dt>1.4.2.9. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-9">Non-Routable Routes</a></dt>
+<dt>1.4.2.10. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-10">Authentication</a></dt>
+<dt>1.4.2.11. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-11">Custom Extras</a></dt>
+<dt>1.4.2.12. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-12">Route-Specific Matching Logic</a></dt>
+<dt>1.4.2.13. <a href="/packages/3.x/Router/defining-routes.html#1-4-2-13">Default Map Route Specifications</a></dt>
 </dl></dd>
 <dt>1.4.3. <a href="/packages/3.x/Router/attaching-route-groups.html#1-4-3">Attaching Route Groups</a></dt>
 <dt>1.4.4. <a href="/packages/3.x/Router/generating-paths.html#1-4-4">Generating Paths From Routes</a></dt>
@@ -123,6 +126,37 @@ permalink: /packages/3.x/
 <dt>1.4.7.1. <a href="/packages/3.x/Router/other-topics.html#1-4-7-1">Catchall Routes</a></dt>
 <dt>1.4.7.2. <a href="/packages/3.x/Router/other-topics.html#1-4-7-2">Logging</a></dt>
 <dt>1.4.7.3. <a href="/packages/3.x/Router/other-topics.html#1-4-7-3">Base Path</a></dt>
+<dt>1.4.7.4. <a href="/packages/3.x/Router/other-topics.html#1-4-7-4">Route Helpers</a></dt>
+</dl></dd>
+</dl></dd>
+<dt>1.5. <a href="/packages/3.x/Sql/">Aura.Sql</a></dt>
+<dd><dl>
+<dt>1.5.1. <a href="/packages/3.x/Sql/getting-started.html#1-5-1">Getting Started</a></dt>
+<dd><dl>
+<dt>1.5.1.1. <a href="/packages/3.x/Sql/getting-started.html#1-5-1-1">Instantiation</a></dt>
+<dt>1.5.1.2. <a href="/packages/3.x/Sql/getting-started.html#1-5-1-2">Array Quoting</a></dt>
+<dt>1.5.1.3. <a href="/packages/3.x/Sql/getting-started.html#1-5-1-3">The <code>perform()</code> Method</a></dt>
+</dl></dd>
+<dt>1.5.2. <a href="/packages/3.x/Sql/fetch.html#1-5-2">The <code>fetch*()</code> Methods</a></dt>
+<dt>1.5.3. <a href="/packages/3.x/Sql/yield.html#1-5-3">The <code>yield*()</code> Methods</a></dt>
+<dt>1.5.4. <a href="/packages/3.x/Sql/profiling-logging.html#1-5-4">Profiling and Logging</a></dt>
+<dd><dl>
+<dt>1.5.4.1. <a href="/packages/3.x/Sql/profiling-logging.html#1-5-4-1">Using The Profiler</a></dt>
+<dt>1.5.4.2. <a href="/packages/3.x/Sql/profiling-logging.html#1-5-4-2">Other Logger Implementations</a></dt>
+<dt>1.5.4.3. <a href="/packages/3.x/Sql/profiling-logging.html#1-5-4-3">Profiler Log Messages</a></dt>
+<dt>1.5.4.4. <a href="/packages/3.x/Sql/profiling-logging.html#1-5-4-4">Profiler Log Level</a></dt>
+</dl></dd>
+<dt>1.5.5. <a href="/packages/3.x/Sql/connection-locator.html#1-5-5">Connection Locator</a></dt>
+<dd><dl>
+<dt>1.5.5.1. <a href="/packages/3.x/Sql/connection-locator.html#1-5-5-1">Runtime Configuration</a></dt>
+<dt>1.5.5.2. <a href="/packages/3.x/Sql/connection-locator.html#1-5-5-2">Construction-Time Configuration</a></dt>
+</dl></dd>
+<dt>1.5.6. <a href="/packages/3.x/Sql/upgrade.html#1-5-6">3.x Upgrade Notes</a></dt>
+<dd><dl>
+<dt>1.5.6.1. <a href="/packages/3.x/Sql/upgrade.html#1-5-6-1">Rebuilder and Parsers</a></dt>
+<dt>1.5.6.2. <a href="/packages/3.x/Sql/upgrade.html#1-5-6-2">Profiling and Logging</a></dt>
+<dt>1.5.6.3. <a href="/packages/3.x/Sql/upgrade.html#1-5-6-3">Instantiation</a></dt>
+<dt>1.5.6.4. <a href="/packages/3.x/Sql/upgrade.html#1-5-6-4">Miscellaneous</a></dt>
 </dl></dd>
 </dl></dd>
 </dl>
